# note-together

./: .gitignore  README.md
note-backend/: Cargo.toml  config.toml
note-backend/migrations/: 20250511225614_notes.up.sql
note-backend/src/: db.rs  main.rs
note-backend/src/infra/: db.rs
note-backend/src/notes/: mod.rs  ws.rs
note-backend/src/routes/: mod.rs  notes.rs
note-frontend/: .cta.json  .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts
note-frontend/public/: manifest.json
note-frontend/src/components/: BlogLoadingPage.tsx  Header.tsx
note-frontend/src/components/editor/: EditorLoadingPage.tsx  EditorMenuBar.tsx  LazyEditor.tsx  NotesEditor.tsx  SuspenseEditor.tsx
note-frontend/src/components/editor/menu/: ClearButtons.tsx  ColorPicker.tsx  HeadingButtons.tsx  HistoryButtons.tsx  ListButtons.tsx  TextFormatButtons.tsx
note-frontend/src/components/ui/: PageHeader.tsx
note-frontend/src/hooks/: useEditorConfig.ts
note-frontend/src/routes/blog/: index.tsx
note-frontend/src/styles/: pageless-editor.css
